--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 </div>
 <header>
-    <a href="index.html"><img src="/images/logo.JPG" alt="Logo" id="logo"></a>
+    <a href="index.html"><img src="images/logo.jpg" alt="Logo" id="logo"></a>
 </header>
 
 <nav>
@@ -120,7 +120,7 @@
         <div class="description-container">
             <div onclick="showContent('BMI')" class="tool-header">
                 <h3>BMI Calculator</h3>
-                <button id="BMI" class="open-button"><img src="/images/right-arrow-svgrepo-com.svg" alt=""></button>
+                <button id="BMI" class="open-button"><img src="images/right-arrow-svgrepo-com.svg" alt=""></button>
             </div>
             <div class="tool-desc" id="BMI-content">
                 <div class="whole-desc">
